# ft_minecraft

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile.in  docker-compose.yml  flake.nix  inputs.toml  prepare-build-emscripten.sh
.github/workflows/: testing.yml
assets/blocks/: dirt.json  grass.json  leaves.json  log.json  sand.json  snow.json  stone.json  water.json
assets/models/: cow.json  player.json  player.jsonc
assets/shaders/: block.wgsl  block_preview.wgsl  chunk.wgsl  cow.wgsl  cube_highlight.frag  cube_highlight.vert  cube_highlight.wgsl  defs.slang  font.frag  font.vert  font.wgsl  item_block.wgsl  lighting.wgsl  mipmap_generation.wgsl  model.wgsl  rv_debug.wgsl  rv_raytracing.wgsl  shading.wgsl  shadowmap.wgsl  simple_shape.wgsl  sky.wgsl  ssao.wgsl  standard_mesh.slang  voxel.frag  voxel.slang  voxel.vert  voxel.wgsl  water.wgsl
assets/shaders/fw/: chunk.wgsl  chunk_shadowmap.wgsl  clouds.wgsl  colored.wgsl  item.wgsl  itemblock.wgsl  model.wgsl  postprocess.wgsl  water.wgsl
assets/shaders/terrain/: biome.slang  defs.slang  noise.slang  surface.slang  visibility.slang
assets/shaders/ui/: color_rect.wgsl  tex_rect.wgsl  text.wgsl  texture_rect.wgsl
assets/shaders/wgsl/: font.wgsl  voxel.wgsl
assets/shaders_wgsl/: voxel.wgsl
assets/xcf/: Leaves.xcf  Snow.xcf  Tree_Top.xcf  tree.xcf
cmake/: AddShaders.cmake  CompileShaders.cmake
design/: RAYTRACING.md
lib/: .clang-tidy  format.hpp  print.hpp  types.hpp
patches/: slang-fix-fgetpos64.diff  slang-fix-platform.diff
src/: AABB.hpp  Args.cpp  Args.hpp  Camera.cpp  Camera.hpp  Color.hpp  Config.cpp  Config.hpp  Console.cpp  Console.hpp  DataPack.cpp  DataPack.hpp  Emscripten.cpp  Engine.cpp  Engine.hpp  Event.hpp  Font.cpp  Font.hpp  Id.hpp  Input.cpp  Input.hpp  MeshPrimitives.hpp  Model.cpp  Model.hpp  Profiler.hpp  Ray.hpp  Rpc.hpp  Toml.hpp  Transform3D.hpp  Type.cpp  Type.hpp  Variant.cpp  Variant.hpp  Window.cpp  Window.hpp  main.cpp  precompiled.hpp  spline.hpp
src/Block/: Block.cpp  Block.hpp  CraftingTable.cpp  CraftingTable.hpp  Inventory.hpp
src/Core/: Alloc.cpp  Alloc.hpp  Assert.hpp  Class.cpp  Class.hpp  DataBuffer.hpp  Defer.hpp  Definitions.hpp  Error.cpp  Error.hpp  Filesystem.cpp  Filesystem.hpp  Flags.hpp  Format.hpp  Hash.hpp  Hasher.hpp  IO.cpp  IO.hpp  Iterator.hpp  Json.hpp  Logger.hpp  Math.hpp  Option.hpp  Print.hpp  Ref.cpp  Ref.hpp  Registry.cpp  Registry.hpp  Result.hpp  Span.hpp  StackVector.hpp  Stacktrace.hpp  String.cpp  String.hpp  StringView.cpp  StringView.hpp  ThreadPool.cpp  ThreadPool.hpp  Traits.hpp  Types.hpp  (+2 more)
src/Core/Containers/: Array.hpp  HashMap.hpp  HashSet.hpp  InplaceVector.hpp  Iterator.hpp  LocalVector.hpp  Map.hpp  Set.hpp  StackVector.hpp  Vector.hpp  View.hpp
src/Core/Noise/: Simplex.cpp  Simplex.hpp
src/Entity/: Arrow.cpp  Arrow.hpp  Camera.cpp  Camera.hpp  Cow.cpp  Cow.hpp  Entity.cpp  Entity.hpp  Item.cpp  Item.hpp  LivingEntity.cpp  LivingEntity.hpp  Mob.cpp  Mob.hpp  Player.cpp  Player.hpp  Zombie.cpp  Zombie.hpp
src/Entity/Pathfinding/: Node.hpp  Path.hpp  PathNode.hpp  Pathfinding.cpp  Pathfinding.hpp
src/Inventory/: CraftingManager.cpp  CraftingManager.hpp  CraftingTable.cpp  CraftingTable.hpp  Inventory.cpp  Inventory.hpp  PlayerInventory.cpp  PlayerInventory.hpp
src/Item/: Bow.cpp  Bow.hpp  Bucket.cpp  Bucket.hpp  Inventory.cpp  Inventory.hpp  Item.cpp  Item.hpp  ItemStack.cpp  ItemStack.hpp
src/MP/: Manager.cpp  Manager.hpp  Peer.cpp  Peer.hpp  Synchronizer.cpp  Synchronizer.hpp
src/Network/: Network.cpp  Network.hpp  Packet.cpp  Packet.hpp
src/Physics/: Collider.cpp  Collider.hpp  PhysicsBody.cpp  PhysicsBody.hpp  PhysicsSpace.cpp  PhysicsSpace.hpp
src/Platform/: Emscripten.cpp  Platform.cpp  Platform.hpp
src/Render/: Driver.cpp  Driver.hpp  DriverVulkan.cpp  DriverVulkan.hpp  DriverWebGPU.cpp  DriverWebGPU.hpp  Graph.cpp  Graph.hpp  ImGUIToolKit.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShaderMap.hpp  Shaders.cpp  Types.hpp  WGSLParser.cpp  WGSLParser.hpp  WebGPU.hpp
src/Render/Vulkan/: DriverVulkan.cpp  DriverVulkan.hpp
src/Render/WebGPU/: DriverWebGPU.cpp  DriverWebGPU.hpp
src/Scene/: Entity.cpp  Entity.hpp  Player.cpp  Player.hpp  Scene.cpp  Scene.hpp  System.hpp
src/Scene/Components/: Camera.cpp  Camera.hpp  Component.hpp  MeshInstance.hpp  RigidBody.cpp  RigidBody.hpp  Transform3D.hpp  Transformed3D.cpp  Transformed3D.hpp  Visual.hpp
src/UI/: Chat.cpp  Chat.hpp  ColorRect.cpp  ColorRect.hpp  Container.hpp  ItemSlot.cpp  ItemSlot.hpp  Label.cpp  Label.hpp  TextureRect.cpp  TextureRect.hpp  Theme.hpp  UI.hpp
src/World/: Biome.hpp  Block.cpp  Block.hpp  Chunk.cpp  Chunk.hpp  Dimension.cpp  Dimension.hpp  Gen.cpp  Gen.hpp  Generator.cpp  Generator.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  Registry.cpp  Registry.hpp  Save.cpp  Save.hpp  World.cpp  World.hpp
src/World/Generation/: Generator.hpp  SimplexNoise.cpp  SimplexNoise.hpp  Terrain.cpp  Terrain.hpp
src/World/Pass/: Flat.cpp  Flat.hpp  FlatSurface.cpp  FlatSurface.hpp  Overworld.cpp  Overworld.hpp  Surface.cpp  Surface.hpp
tests/: HashMap.cpp  Option.cpp  Ref.cpp  Result.cpp  Variant.cpp  Vector.cpp  class.cpp  ref.cpp
tools/datapack/: CMakeLists.txt  main.cpp
tools/shadercomp/: main.cpp
web/: clangd.in  index.html
